--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600&family=Roboto+Mono:wght@200;400;500;700&display=swap");
+
 .home {
   background-color: pink;
   height: 100vh;
@@ -22,6 +24,31 @@
     max-width: 600px;
     color: #175483;
     text-shadow: 1px 1  px rgb(232, 195, 195);
+}
+
+.arrow{
+  
+}
+
+.createBtn{
+  font-family: "Caveat", cursive;
+  font-family: "Roboto Mono", monospace;
+  color: white;
+  background-color: #d98de3;
+  border-radius: 25px;
+  border: 5px solid #1754834c;
+  display: block;
+  width: 30%;
+  margin: auto;
+  font-size: 30px;
+  cursor: pointer;
+  padding: 14px 28px;
+}
+
+.createBtn:hover{
+  color: #000000;
+  background-color: #59d5fb ;
+  border-color: #f1f151;
 }
 
 
