--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -59,3 +59,27 @@
         max-width: 350px;
     }
 }
+
+.fade-in {
+  animation: fadeIn 500ms ease-in;
+}
+.fade-out {
+  animation: fadeOut 500ms ease-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeOut {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
