--- a/src/styles/View.css
+++ b/src/styles/View.css
@@ -1,6 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600&family=Roboto+Mono:wght@200;400;500;700&display=swap");
+
+
 .view {
+
   background-color: rgb(54, 85, 209);
   height: 100vh;
+}
+
+h2,h3,p{
+  margin: 0;
+  padding: 0;
 }
 
 .toDoList {
@@ -8,7 +17,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 5px;
+  gap: 10px;
+  
 }
 
 .toDo {
@@ -16,4 +26,17 @@
   border-radius: 10px;
   width: 50%;
   background-color: white;
+}
+
+.line{
+  border-bottom: 2px solid #555;
+  display: block;
+}
+
+.toDoTitle{
+  background-color: cyan;
+}
+
+.toDoDate{
+  font-size: small;
 }
