--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600&family=Roboto+Mono:wght@200;400;500;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400;500;700&display=swap');
 .App {
   text-align: center;
   display: flex;
@@ -8,7 +7,7 @@
 }
 
 body {
-  font-family: "Caveat", cursive;
+
   font-family: "Roboto Mono", monospace;
   display: inline-block;
   width: 100%;
