--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600&family=Roboto+Mono:wght@200;400;500;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400;500;700&display=swap');
 .home {
   background-color: pink;
   height: 100vh;
@@ -33,7 +32,6 @@
 }
 
 .createBtn{
-  font-family: "Caveat", cursive;
   font-family: "Roboto Mono", monospace;
   color: white;
   background-color: #d98de3;
