--- a/src/styles/View.css
+++ b/src/styles/View.css
@@ -1,8 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600&family=Roboto+Mono:wght@200;400;500;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400;500;700&display=swap');
 
 .view {
-
   background-color: rgb(54, 85, 209);
 }
 
